Fix db errors for msg feature