@@ -10,105 +10,114 @@ import java.util.stream.Collectors;
 
 public class MessagingHandler {
     private final Messenger feature;
-    private final MessagingSettingsService settingsService;
-
-    // In-memory caches for quick lookup after initial load
+    private final MessagingSettingsService settings;
     private final Set<UUID> toggledOff = Collections.newSetFromMap(new ConcurrentHashMap<>());
-    private final Set<UUID> spies = Collections.newSetFromMap(new ConcurrentHashMap<>());
+    private final Set<UUID> spies      = Collections.newSetFromMap(new ConcurrentHashMap<>());
     private final Map<UUID, Set<UUID>> blockMap = new ConcurrentHashMap<>();
     private final Map<UUID, UUID> lastMessageFrom = new ConcurrentHashMap<>();
 
     public MessagingHandler(Messenger feature) {
         this.feature = feature;
-        this.settingsService = new MessagingSettingsService(feature);
+        this.settings = new MessagingSettingsService(feature);
 
-        // Preload settings for any players already online
-        feature.getPlugin().getProxy().getAllPlayers().forEach(this::loadPlayerSettings);
+        // Preload online players
+        feature.getPlugin().getProxy()
+                .getAllPlayers()
+                .forEach(this::loadPlayerSettings);
     }
 
     /**
-     * Load this player's persisted settings into the in-memory caches.
+     * Loads (and creates if needed) both
+     * PlayerEntity and Settings in one atomic tx,
+     * then initializes the in-memory caches.
      */
     public void loadPlayerSettings(Player player) {
         var loc = feature.getLocalizationHandler();
-        UUID playerId = player.getUniqueId();
+        UUID id = player.getUniqueId();
 
-        settingsService.getPlayerEntity(playerId).ifPresentOrElse(playerEnt -> {
-            // Retrieve or create the settings row
-            PlayerMessageSettingsEntity settings = settingsService.getOrCreateSettings(playerEnt);
+        try {
+            PlayerMessageSettingsEntity s =
+                    settings.loadSettings(id, player.getUsername());
 
-            // msg_toggle (false means toggled off)
-            if (!settings.isMsgToggle()) {
-                toggledOff.add(playerId);
-            }
+            // messaging toggle
+            if (!s.isMsgToggle()) toggledOff.add(id);
+            else                 toggledOff.remove(id);
+
             // spy mode
-            if (settings.isMsgSpy()) {
-                spies.add(playerId);
-            }
+            if (s.isMsgSpy()) spies.add(id);
+            else              spies.remove(id);
+
             // blocked players
-            Set<UUID> blocked = settings.getBlockedPlayers().stream()
-                    .map(e -> UUID.fromString(e.getUuid()))
+            Set<UUID> blocked = s.getBlockedPlayers().stream()
+                    .map(be -> UUID.fromString(be.getUuid()))
                     .collect(Collectors.toSet());
-            blockMap.put(playerId, blocked);
-        }, () -> player.sendMessage(loc.getMessage("message.error.player_not_found")
-                .forAudience(player)
-                .build()));
+            blockMap.put(id, blocked);
+
+        } catch (Exception ex) {
+            feature.getPlugin().getLogger()
+                    .error("Failed to load messaging settings for " + player.getUsername(), ex);
+            player.sendMessage(loc.getMessage("message.error.player_not_found")
+                    .forAudience(player).build());
+        }
     }
 
     public void processPrivateMessage(Player sender, Player receiver, String msg) {
         var loc = feature.getLocalizationHandler();
-        if (sender.getUniqueId().equals(receiver.getUniqueId())) {
+        UUID a = sender.getUniqueId(), b = receiver.getUniqueId();
+
+        if (a.equals(b)) {
             sender.sendMessage(loc.getMessage("message.self").forAudience(sender).build());
             return;
         }
-        if (toggledOff.contains(sender.getUniqueId())) {
+        if (toggledOff.contains(a)) {
             sender.sendMessage(loc.getMessage("message.disabled.sender").forAudience(sender).build());
             return;
         }
-        if (toggledOff.contains(receiver.getUniqueId())) {
+        if (toggledOff.contains(b)
+                && !sender.hasPermission("proxyfeatures.feature.messager.command.toggle.bypass")) {
             sender.sendMessage(loc.getMessage("message.disabled.receiver").forAudience(sender).build());
             return;
         }
-        if (isBlocked(sender.getUniqueId(), receiver.getUniqueId())) {
+        if (isBlocked(a, b)) {
             sender.sendMessage(loc.getMessage("message.blocked").forAudience(sender).build());
             return;
         }
         sendPrivateMessage(sender, receiver, msg);
     }
 
-    private void sendPrivateMessage(Player sender, Player receiver, String msg) {
-        lastMessageFrom.put(receiver.getUniqueId(), sender.getUniqueId());
-        lastMessageFrom.put(sender.getUniqueId(), receiver.getUniqueId());
+    private void sendPrivateMessage(Player s, Player r, String msg) {
+        // record reply
+        lastMessageFrom.put(r.getUniqueId(), s.getUniqueId());
+        lastMessageFrom.put(s.getUniqueId(), r.getUniqueId());
 
         var loc = feature.getLocalizationHandler();
-        var fromCmp = loc.getMessage("message.format.from")
+        var from = loc.getMessage("message.format.from")
                 .withPlaceholders(Map.of(
-                        "sender_server", sender.getCurrentServer()
-                                .map(s -> s.getServerInfo().getName()).orElse("unknown"),
-                        "sender", sender.getUsername(),
-                        "message", msg
-                )).build();
-        var toCmp = loc.getMessage("message.format.to")
+                        "sender_server", s.getCurrentServer().map(x->x.getServerInfo().getName()).orElse("unknown"),
+                        "sender", s.getUsername(),
+                        "message", msg))
+                .build();
+        var to   = loc.getMessage("message.format.to")
                 .withPlaceholders(Map.of(
-                        "receiver_server", receiver.getCurrentServer()
-                                .map(s -> s.getServerInfo().getName()).orElse("unknown"),
-                        "receiver", receiver.getUsername(),
-                        "message", msg
-                )).build();
-        var spyCmp = loc.getMessage("message.format.spy")
+                        "receiver_server", r.getCurrentServer().map(x->x.getServerInfo().getName()).orElse("unknown"),
+                        "receiver", r.getUsername(),
+                        "message", msg))
+                .build();
+        var spy  = loc.getMessage("message.format.spy")
                 .withPlaceholders(Map.of(
-                        "sender", sender.getUsername(),
-                        "receiver", receiver.getUsername(),
-                        "message", msg
-                )).build();
+                        "sender", s.getUsername(),
+                        "receiver", r.getUsername(),
+                        "message", msg))
+                .build();
 
-        receiver.sendMessage(fromCmp);
-        sender.sendMessage(toCmp);
+        r.sendMessage(from);
+        s.sendMessage(to);
+
         spies.stream()
-                .filter(id -> !id.equals(sender.getUniqueId()) && !id.equals(receiver.getUniqueId()))
-                .map(feature.getPlugin().getProxy()::getPlayer)
+                .filter(id -> !id.equals(s.getUniqueId()) && !id.equals(r.getUniqueId()))
+                .map(id -> feature.getPlugin().getProxy().getPlayer(id))
                 .flatMap(Optional::stream)
-                .forEach(spy -> spy.sendMessage(spyCmp));
+                .forEach(p -> p.sendMessage(spy));
     }
 
     public Optional<UUID> getLastRecipient(UUID who) {
@@ -118,10 +127,9 @@ public class MessagingHandler {
     public void toggleMessaging(UUID who) {
         boolean nowOff = !toggledOff.remove(who);
         if (nowOff) toggledOff.add(who);
-        // persist
-        settingsService.getPlayerEntity(who).ifPresentOrElse(ent ->
-                        settingsService.setToggle(ent, !nowOff),
-                () -> {/* cannot persist; optionally log */});
+
+        settings.getPlayerEntity(who)
+                .ifPresent(pe -> settings.setToggle(pe, !nowOff));
     }
 
     public boolean isMessagingEnabled(UUID who) {
@@ -131,10 +139,9 @@ public class MessagingHandler {
     public void toggleSpy(UUID who) {
         boolean wasOn = spies.remove(who);
         if (!wasOn) spies.add(who);
-        // persist
-        settingsService.getPlayerEntity(who).ifPresentOrElse(ent ->
-                        settingsService.setSpy(ent, spies.contains(who)),
-                () -> {/* cannot persist; optionally log */});
+
+        settings.getPlayerEntity(who)
+                .ifPresent(pe -> settings.setSpy(pe, spies.contains(who)));
     }
 
     public boolean isSpy(UUID who) {
@@ -142,24 +149,24 @@ public class MessagingHandler {
     }
 
     public boolean isBlocked(UUID a, UUID b) {
-        return blockMap.getOrDefault(a, Collections.emptySet()).contains(b)
-                || blockMap.getOrDefault(b, Collections.emptySet()).contains(a);
+        return blockMap.getOrDefault(a, Set.of()).contains(b)
+                || blockMap.getOrDefault(b, Set.of()).contains(a);
     }
 
     public void block(UUID who, UUID target) {
-        blockMap.computeIfAbsent(who, k -> Collections.newSetFromMap(new ConcurrentHashMap<>())).add(target);
-        // persist
-        settingsService.getPlayerEntity(who).ifPresentOrElse(ent ->
-                        settingsService.block(ent, settingsService.getPlayerEntity(target).orElseThrow()),
-                () -> {/* cannot persist; optionally log */});
+        blockMap.computeIfAbsent(who, k->new HashSet<>()).add(target);
+        settings.getPlayerEntity(who)
+                .ifPresent(pe -> settings.block(pe,
+                        settings.getPlayerEntity(target)
+                                .orElseThrow()));
     }
 
     public void unblock(UUID who, UUID target) {
-        blockMap.getOrDefault(who, Collections.emptySet()).remove(target);
-        // persist
-        settingsService.getPlayerEntity(who).ifPresentOrElse(ent ->
-                        settingsService.unblock(ent, settingsService.getPlayerEntity(target).orElseThrow()),
-                () -> {/* cannot persist; optionally log */});
+        blockMap.getOrDefault(who, Set.of()).remove(target);
+        settings.getPlayerEntity(who)
+                .ifPresent(pe -> settings.unblock(pe,
+                        settings.getPlayerEntity(target)
+                                .orElseThrow()));
     }
 
     public void cleanupAll() {
